--- a/css/style.css
+++ b/css/style.css
@@ -732,9 +732,42 @@ a:hover {
     
 }
 /********************************/
-/*         map*/
+/*         moodify*/
 /********************************/
 
-  #map {
-        height: 100%;
-      }
+
+
+h1#app-name {
+    font-size:84px;
+}
+
+button#refreshbtn {
+    display:none;
+}
+
+img#selected-img{
+    width:150px;
+    height:150px;
+    padding:20px;
+    display:none;
+    margin: 0 auto;
+}
+
+h2#page-header {
+    padding-top:20px;
+    padding-bottom:20px;
+}
+
+body #page-container {
+    margin-top: 150px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.btn-wrapper {
+    padding: 20px 0;
+}
+
+input#my-file-selector {
+    display:none;
+}
